fix(components): Lighten hero overlay on mobile

--- a/assets/styles/@tcds/components/hero.scss
+++ b/assets/styles/@tcds/components/hero.scss
@@ -24,7 +24,7 @@
 
   @include breakpoint-below("medium") {
     &:not(.Section--overlay-darken):not(.Section--dark-text) &__print-safe {
-      background-color: rgba(30 35 40 / var(--section-overlay-opacity, 60%));
+      background-color: rgba(30 35 40 / var(--section-overlay-opacity, 40%));
     }
   }
 
